--- a/06-dinamika/dinamika-BEAMER.tex
+++ b/06-dinamika/dinamika-BEAMER.tex
@@ -288,7 +288,7 @@ kad su istovremeno ispunjeni svi ovi ograničavajući uvjeti
 
 \begin{itemize}
 \item neviskozno tečenje, to jest tečenje sa zanemarivim unutarnjim trenjem 
-\item stacionarno tečenje ($\frac{\partial\vec{v}}{\partial t}$) 
+\item stacionarno tečenje ($\frac{\partial\vec{v}}{\partial t}=0$) 
 \item nestlačivi fluid ($\rho=konst.$) 
 \item tečenje duľ strujnice. 
 \end{itemize}
