dodana Creative Commons ikonica

--- a/06-dinamika/dinamika-BEAMER.tex
+++ b/06-dinamika/dinamika-BEAMER.tex
@@ -9,12 +9,14 @@
 \usetheme{Frankfurt}
 
 \begin{document}
+
 \title{Dinamika tekućina}
 \author{Ivan Hip}
-\date{Geotehnički fakultet, Sveučilište u Zagrebu}
+\institute{Geotehnički fakultet, Sveučilište u Zagrebu}
+\date{\includegraphics[width=0.15\textwidth]{../CC-by-sa.pdf}}
 
 \begin{frame}
-\titlepage
+  \titlepage
 \end{frame}
 
 \section{Lagrangeov i Eulerov pristup}
