Tečenje u cijevima - verzija iz 2017.

--- a/06-dinamika/dinamika-BEAMER.tex
+++ b/06-dinamika/dinamika-BEAMER.tex
@@ -43,7 +43,7 @@ potrebe raditi razliku.
 
 \begin{figure}
 \begin{centering}
-\includegraphics[width=0.8\paperwidth]{figs/slika-mat-vs-kont}
+\includegraphics[width=0.8\paperwidth]{slike/slika-mat-vs-kont}
 \par\end{centering}
 \caption{a) Materijalni volumen tekućine u 4 vremenska trenutka: pratimo točno
 određeni volumen tekućine pri istjecanju iz rezervoara. b) Interesira
@@ -54,7 +54,7 @@ nas što se događa u cijevi --- volumen cijevi je kontrolni volumen.}
 \begin{frame}{Protok}
 
 \begin{figure}
-\includegraphics[scale=0.3]{figs/protok}\caption{Mjerenje protoka}
+\includegraphics[scale=0.3]{slike/protok}\caption{Mjerenje protoka}
 \end{figure}
 \end{frame}
 
@@ -83,7 +83,7 @@ Q_{m}=\dot{m}=\lim_{\Delta t\rightarrow0}\frac{\Delta m}{\Delta t}=\frac{dm}{dt}
 \begin{frame}{Protok kroz cijev površine presjeka $S$}
 
 \begin{figure}
-\includegraphics[scale=0.25]{figs/protok-kroz-cijev}
+\includegraphics[scale=0.25]{slike/protok-kroz-cijev}
 \end{figure}
 \[
 Q=\lim_{\Delta t\rightarrow0}\frac{\Delta V}{\Delta t}=\lim_{\Delta t\rightarrow0}\frac{S\Delta r}{\Delta t}=S\lim_{\Delta t\rightarrow0}\frac{\Delta r}{\Delta t}=S\frac{dr}{dt}=Sv
@@ -111,7 +111,7 @@ brzina tečenja kroz cijev
 \begin{frame}{Jednadžba kontinuiteta za nestlačivi fluid}
 
 \begin{figure}
-\includegraphics[scale=1.35]{figs/jdba-kont-cijev}
+\includegraphics[scale=1.35]{slike/jdba-kont-cijev}
 \end{figure}
 \[
 Q_{A}=Q_{B}\;\Rightarrow\;\bar{v}_{A}S_{A}=\bar{v}_{B}S_{B}
@@ -121,7 +121,7 @@ Q_{A}=Q_{B}\;\Rightarrow\;\bar{v}_{A}S_{A}=\bar{v}_{B}S_{B}
 \begin{frame}{Na manjem presjeku brzina je veća!}
 
 \begin{figure}
-\includegraphics[scale=1.35]{figs/jdba-kont-cijev}
+\includegraphics[scale=1.35]{slike/jdba-kont-cijev}
 \end{figure}
  \[
 \bar{v}_{A}S_{A}=\bar{v}_{B}S_{B}\;\Rightarrow\;\bar{v}_{B}=\frac{S_{A}}{S_{B}}\bar{v}_{A}\;\Rightarrow\;\bar{v}_{B}>\bar{v}_{A}
