Riješeni paketi za hrvatski jezik; jedinstveni naslovni slajd

--- a/06-dinamika/dinamika-BEAMER.tex
+++ b/06-dinamika/dinamika-BEAMER.tex
@@ -1,23 +1,14 @@
 % Ivan Hip / 2019-04-29
 
 \documentclass[croatian]{beamer}
-
-\usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}
-\usepackage{babel}
-
 \usetheme{Frankfurt}
 
+\input{../hrvatski}
+\input{../naslovnislajd}
+\naslov{Dinamika tekućina}
+
 \begin{document}
-
-\title{Dinamika tekućina}
-\author{Ivan Hip}
-\institute{Geotehnički fakultet, Sveučilište u Zagrebu}
-\date{\includegraphics[width=0.15\textwidth]{../CC-by-sa.pdf}}
-
-\begin{frame}
-  \titlepage
-\end{frame}
+\naslovnislajd
 
 \section{Lagrangeov i Eulerov pristup}
 
@@ -127,9 +118,6 @@ Q_{A}=Q_{B}\;\Rightarrow\;\bar{v}_{A}S_{A}=\bar{v}_{B}S_{B}
 \bar{v}_{A}S_{A}=\bar{v}_{B}S_{B}\;\Rightarrow\;\bar{v}_{B}=\frac{S_{A}}{S_{B}}\bar{v}_{A}\;\Rightarrow\;\bar{v}_{B}>\bar{v}_{A}
 \]
 \end{frame}
-
-
-\section{Vektorska polja brzine i ubrzanja}
 
 \begin{frame}{Vektorska polja brzine i ubrzanja}
 
